# ShockFXMpp

./: .bazelrc  .clang-format  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  coverage.sh  main.cpp
include/equations/: fd_transport_equation.h  fv_transport_equation.h
include/models/: euler1d_conservative.h
scripts/: plot.py  verification_data.py
src/equations/: fd_transport_equation.cpp  fv_transport_equation.cpp
src/models/: euler1d_conservative.cpp
tests/: BUILD
